# scraprrr

./: .gitignore  API.md  API_QUICKSTART.md  DOCUMENTATION.md  PRD-FRONTEND.md  PRD.md  PR_DESCRIPTION.md  QWEN.md  README.md  docker-compose.fullstack.yml  pyproject.toml  requirements.txt
backup/traveloka_flight_scraper/: README.md  __init__.py  extractor.py  utils.py
backup/traveloka_hotel_scraper/: README.md  __init__.py  driver.py  page.py  scraper.py  utils.py
docker/api/: Dockerfile  docker-compose.yml
docker/selenium-grid/: docker-compose.hub.yml  docker-compose.yml
frontend/: .gitignore  ASYNC_SCRAPING_GUIDE.md  DEBUG_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  JOBS_DEBUG_GUIDE.md  JOBS_FIX_SUMMARY.md  README.md  VNC_GUIDE.md  docker-compose.yml  index.html  nginx.conf
frontend/public/: test.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AppNavbar.tsx  FlightResults.tsx  FlightSearchForm.tsx  HealthStatus.tsx  HotelResults.tsx  HotelSearchForm.tsx  JobList.tsx  JobMonitor.tsx  index.ts
frontend/src/hooks/: index.ts  useJobPolling.ts  useScraper.ts
frontend/src/pages/: AboutPage.tsx  HomePage.tsx  JobsPage.tsx  index.ts
frontend/src/services/: api.ts  index.ts
frontend/src/types/: api.ts
playground/: flight_scraper.ipynb  hotel_scraper.ipynb
src/scraprrr/: __init__.py
src/scraprrr/api/: __init__.py  app.py  cli.py
src/scraprrr/api/core/: config.py  exceptions.py  job_manager.py
src/scraprrr/api/routes/: __init__.py  flights.py  hotels.py  jobs.py
src/scraprrr/api/schemas/: __init__.py
src/scraprrr/cli/: __init__.py  main.py
src/scraprrr/cli/commands/: __init__.py  flight.py  hotel.py
src/scraprrr/cli/parsers/: __init__.py  flight_parser.py  hotel_parser.py
src/scraprrr/core/: __init__.py  base.py  driver.py  utils.py
src/scraprrr/modules/: __init__.py
src/scraprrr/modules/flight/: __init__.py  extractor.py  models.py  page.py  scraper.py
src/scraprrr/modules/hotel/: __init__.py  extractor.py  models.py  page.py  scraper.py
src/traveloka_flight_scraper/: README.md  __init__.py  cli.py  config.py  driver.py  models.py  page.py  scraper.py  utils.py
src/traveloka_hotel_scraper/: README.md  __init__.py  cli.py  config.py  driver.py  extractor.py  models.py  utils.py
src/traveloka_scraper_common/: __init__.py  cli.py  driver.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_extractor.py  test_hotel_cli.py  test_hotel_extractor.py  test_hotel_models.py  test_hotel_utils.py  test_models.py  test_page.py  test_scraper.py  test_utils.py
